--- a/DependencyInjection/Starter/PeopleViewer/PeopleViewer.csproj
+++ b/DependencyInjection/Starter/PeopleViewer/PeopleViewer.csproj
@@ -7,8 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ninject" Version="3.3.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PeopleViewer.Presentation\PeopleViewer.Presentation.csproj" />
     <ProjectReference Include="..\PeopleViewer.View\PeopleViewer.View.csproj" />
+    <ProjectReference Include="..\PersonReader.Caching\PersonReader.Caching.csproj" />
+    <ProjectReference Include="..\PersonReader.CSV\PersonReader.CSV.csproj" />
     <ProjectReference Include="..\PersonReader.Service\PersonReader.Service.csproj" />
   </ItemGroup>
 
