--- a/DependencyInjection/Starter/PeopleViewer.View/PeopleViewer.View.csproj
+++ b/DependencyInjection/Starter/PeopleViewer.View/PeopleViewer.View.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ninject" Version="3.3.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\PeopleViewer.Presentation\PeopleViewer.Presentation.csproj" />
   </ItemGroup>
